adjusting page:load for scripts in the system

--- a/app/views/accounts/add_fund.html.erb
+++ b/app/views/accounts/add_fund.html.erb
@@ -144,7 +144,7 @@
 </div>
 
 <script type="text/javascript">
-  $(function() {
+  $(document).on("ready page:load", function () {
       window.initializeStripeForm();
 
       $('input[name="payment_type"]').change(function(){
