--- a/app/views/bank_accounts/withdrawal.html.erb
+++ b/app/views/bank_accounts/withdrawal.html.erb
@@ -23,7 +23,7 @@
 
 <% content_for :after_js do %>
   <script type="text/javascript">
-    $(function() { 
+    $(document).on("ready page:load", function () {
       Account.initBankWithdrawal();
     });
   </script>
