--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -66,6 +66,23 @@
 
 <script>
   var fantasyEntriesData = <%= @data.to_json.html_safe %>;
+
+  $(document).on("ready page:load", function () {
+
+    var liveContestsCollection     = new Main.Collections.LiveContestsCollection(fantasyEntriesData.liveContests)
+    var upcomingContestsCollection = new Main.Collections.UpcomingContestsCollection(fantasyEntriesData.upcomingContests);
+    var completedContestsCollection = new Main.Collections.CompletedContestsCollection(fantasyEntriesData.completedContests);
+
+    console.log(liveContestsCollection);
+    console.log(upcomingContestsCollection);
+    console.log(completedContestsCollection);
+
+    var liveContestView       = new Main.Views.LiveContestsView(liveContestsCollection);
+    var upcomingContestsView  = new Main.Views.UpcomingContestsView(upcomingContestsCollection);
+    var completedContestsView = new Main.Views.CompletedContestsView(completedContestsCollection);
+
+  });
+
 </script>
 
 <script type="text/template" id="live-contests-template">
