--- a/app/assets/javascripts/backbone/templates/completed-contests-template.html
+++ b/app/assets/javascripts/backbone/templates/completed-contests-template.html
@@ -20,10 +20,10 @@
           <td><%= contest.id %></td>
           <td><%= contest.sport %></td>
           <td><%= contest.contestdate %></td>
-          <td><%= contest.render.entry_fee %></td>
-          <td><%= contest.render.prize %></td>
+          <td><%= contest.entry_fee %></td>
+          <td><%= contest.prize %></td>
           <td><%= contest.final_ranking %></td>
-          <td><%= contest.render.won %></td>
+          <td><%= contest.won %></td>
           <td><a class="button" href="<%= contest.results_path %>">RESULTS</a></td>
         </tr>
         <% }); %>
