--- a/app/assets/javascripts/backbone/templates/lineup-player-template.html
+++ b/app/assets/javascripts/backbone/templates/lineup-player-template.html
@@ -8,7 +8,7 @@
         <tr class="contest-player" data-player-id="<%= player.get('id') %>"
               data-player-name="<%= player.name() %>"
             data-player-salary="<%= player.get('salary') %>" data-player-opp="<%= player.getHomeTeam() %>@<%= player.getAwayTeam() %>"
-            data-player-fppg="24.5" data-player-position="<%= player.sportposition().get('name') %>">
+            data-player-fppg="<%= parseFloat(player.get('fppg')) %>" data-player-position="<%= player.sportposition().get('name') %>">
             <td class="position">
           <span>
             <strong> <%= player.sportposition().get('name') %></strong>
@@ -36,7 +36,7 @@
                 <!--< number_to_currency player.salary, precision: 0 >--></span>
             </td>
             <td class='fppg'>
-                <span>24.5</span>
+                <span><%= parseFloat(player.get('fppg')).toFixed(2) %></span>
             </td>
 
             <!-- Plus button to add player -->
