--- a/app/assets/javascripts/backbone/templates/live-contests-template.html
+++ b/app/assets/javascripts/backbone/templates/live-contests-template.html
@@ -19,10 +19,10 @@
         <tr class="livecontest">
           <td><%= contest.id %></td>
           <td><%= contest.sport %></td>
-          <td data-start-at="<%= contest.contest_start %>"><%= contest.start_at %></td>
+          <td data-start-at="<%= contest.contest_start %>"><%= moment.utc(contest.contest_start).local().format("hh:mm a") %></td>
           <!--<td data-time="<%= contest.end_at %>" class="js-time-count"><%= contest.end_at %></td>-->
-          <td><%= contest.entry_fee %></td>
-          <td><%= contest.prize %></td>
+          <td><%= accounting.formatMoney(contest.entry_fee) %></td>
+          <td><%= accounting.formatMoney(contest.prize) %></td>
           <td><%= contest.place %></td>
           <td><a class="button" href="<%= contest.results_path %>">WATCH LIVE</a></td>
         </tr>
