--- a/app/assets/javascripts/backbone/templates/upcoming-contests-template.html
+++ b/app/assets/javascripts/backbone/templates/upcoming-contests-template.html
@@ -19,9 +19,9 @@
         <tr class="upcomingcontest">
           <td><%= contest.id %></td>
           <td><%= contest.sport %></td>
-          <td data-time="<%= contest.contest_start %>"  class="js-time-count"><%= contest.start_at %></td>
-          <td><%= contest.entry_fee %></td>
-          <td><%= contest.prize %></td>
+          <td data-time="<%= contest.contest_start %>"  class="js-time-count"><%= moment(contest.contest_start).format("hh:mm a") %></td>
+          <td><%= accounting.formatMoney(contest.entry_fee) %></td>
+          <td><%= accounting.formatMoney(contest.prize) %></td>
           <td><%= contest.entries_count %>/<%= contest.max_entries %></td>
           <td><a class="button" href="<%= contest.edit_path %>">EDIT</a></td>
           <td><a class="button" href="<%= contest.view_path %>">VIEW</a></td>
