--- a/app/views/users/signin_popup.html.erb
+++ b/app/views/users/signin_popup.html.erb
@@ -8,11 +8,11 @@
       <input type="text" id="user_username" name="user[username]" class="form-control">
     </div>
     <div class="form-group">
-      <input type="radio" id="is_login" name="login_or_register" checked="checked" value="login" class="login-or-register">
+      <input type="radio" id="is_login" name="login_or_register" checked="checked" value="login" class="login-or-register" tabindex="-1">
       <label for="is_login">Yes, I already have a new password</label>
     </div>
     <div class="form-group">
-      <input type="radio" id="is_register" name="login_or_register" value="register" class="login-or-register">
+      <input type="radio" id="is_register" name="login_or_register" value="register" class="login-or-register"  tabindex="-1">
       <label for="is_register">No, I am a new customer</label>
     </div>
 
