--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require bootstrap
+ *= require utilities
  *= require navbar-static-top
  *= require navbar
  *= require style
