--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -52,3 +52,7 @@
   <%= render partial: 'contest', collection: @contests %>
   </tbody>
 </table>
+
+<div class="ajax-loader" style="display:none;">
+  <img src="/assets/ajax-loader.gif">
+</div>
