modal overlay can also be fired in the right column now

--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -142,8 +142,8 @@
                 <%= spot_form.hidden_field :sport_position_id %>
                 <%= spot_form.hidden_field :spot %>
               </td>
-              <td class='player val'>
-                <span><%= player_field_or_nbsp spot, :name %></span>
+              <td class='player val player-stats'>
+                <span class="player-link"></span>
                 <%= spot_form.hidden_field :player_id %>
               </td>
               <td class='opp val'>
