removing inline script

--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -163,7 +163,7 @@
         </tbody>
       </table>
       <%= link_to 'Import »', '#_', class: 'green', id: 'import-lineups' %>
-      <%= link_to 'Clear »', '#_', class: 'green', id: 'clear-lineups', confirm: "are you sure to clear lineups?" %>
+      <%= link_to 'Clear »', '#_', class: 'green', id: 'clear-lineups' %>
     </div>
 
     <%= f.hidden_field :sport %>
