ajax-loader for turbolinks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
       <%= yield %>
     </div>
     <%= render 'shared/footer' %>
+    <div class="ajax-loader" style="display:none;">
+      <img src="/assets/ajax-loader.gif">
+    </div>
     <noscript>
       <div class="no-js-banner">
         <img src="/assets/js-disabled-banner.gif">
