--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -6,13 +6,13 @@
 <div data-entry_id="<%= @entry_id %>" data-contest_id="<%= @entry.contest.id %>"
             class="capitalcontent gamecenter">
 <!--Login Section-->
-<!--
-<%= form_tag({controller:"entries", action:"admin"}, remote: true, id: "admin_buttons_form") do %>
-    <% if @contest.accurate_state != :live %>
-        <%= submit_tag(value="Make Live", :name => "command") %>
-    <% end %>
-<% end %>
--->
+<%#
+<%= form_tag({controller:"entries", action:"admin"}, remote: true, id: "admin_buttons_form") do >
+    < if @contest.accurate_state != :live >
+        <= submit_tag(value="Make Live", :name => "command") >
+    < end >
+< end >
+%>
 
 <ul class="list-inline title">
 <!--  <li>
@@ -104,12 +104,10 @@
 <%= render partial: 'lineup_row_template' %>
 
 <div id="my-scorecard" class="col-md-5 scorecard pull-left" data-entry-id="<%= @entry.id %>">
-    <%= #render partial: 'inner_scorecard'
-    %>
+    <%# #render partial: 'inner_scorecard' %>
 </div>
 <div id="competitor-scorecard" class="col-md-5 scorecard pull-right" data-entry-id="">
-  <%= #render partial: 'inner_scorecard'
-  %>
+  <%# render partial: 'inner_scorecard' %>
 </div>
 
   <script type="text/javascript">
