--- a/app/assets/javascripts/backbone/templates/games-template.html
+++ b/app/assets/javascripts/backbone/templates/games-template.html
@@ -5,11 +5,11 @@
             <tbody>
             <tr class="white">
                 <td class="home-team-alias"><%= game.home_team_alias() %></td>
-                <td class="home-team-score"><%= game.get('home_team_score') %></td>
+                <td class="home-team-score"><%= game.get('home_team_score') || "0" %></td>
             </tr>
             <tr>
                 <td class="away-team-alias"><%= game.away_team_alias() %></td>
-                <td class="away-team-score"><%= game.get('away_team_score') %></td>
+                <td class="away-team-score"><%= game.get('away_team_score') || "0" %></td>
             </tr>
             <tr>
                 <td colspan="2"><span class="game-state-text"><%= game.get('pretty_play_state') %></span></td>
