--- a/app/assets/javascripts/backbone/templates/entry-template.html
+++ b/app/assets/javascripts/backbone/templates/entry-template.html
@@ -23,15 +23,15 @@
             <table class="scorecardTable" cellpadding="10" cellspacing="10">
                 <tbody>
                 <% $.each(player_and_pos, function (idx, player_pos) { %>
-                <tr class="" data-player-id="<%= player_pos[0].get('id') %>">
+                <tr class="" data-player-id="<%= player_pos[0].get('id') %>" data-game-id="<%= player_pos[0].getGameID() %>">
                     <td><h1 class="role"><%= sportpositions_coll.get(player_pos[1]).get('name') %></h1></td>
                     <td><strong class="player-name"> <%= player_pos[0].name() %> </strong>
 
                         <p class="player-score">
                             <% if (player_pos[0].getTeam() === player_pos[0].getHomeTeam()) { %>
-                                <strong><%= player_pos[0].getHomeTeam() %></strong> <%= player_pos[0].getHomeTeamScore() %> @ <%= player_pos[0].getAwayTeam() %> <%= player_pos[0].getAwayTeamScore() %> <%= player_pos[0].getMinutesRemaining() %>
+                                <strong><%= player_pos[0].getHomeTeam() %></strong> <%= player_pos[0].getHomeTeamScore() %> @ <%= player_pos[0].getAwayTeam() %> <%= player_pos[0].getAwayTeamScore() %><br><%= player_pos[0].getMinutesRemaining() %>
                             <% } else { %>
-                                <%= player_pos[0].getHomeTeam() %> <%= player_pos[0].getHomeTeamScore() %> @ <strong><%= player_pos[0].getAwayTeam() %></strong> <%= player_pos[0].getAwayTeamScore() %> <%= player_pos[0].getMinutesRemaining() %>
+                                <%= player_pos[0].getHomeTeam() %> <%= player_pos[0].getHomeTeamScore() %> @ <strong><%= player_pos[0].getAwayTeam() %></strong> <%= player_pos[0].getAwayTeamScore() %><br><%= player_pos[0].getMinutesRemaining() %>
                             <% } %>
                             <!--<strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL-->
                         </p>
