--- a/app/views/accounts/add_fund.html.erb
+++ b/app/views/accounts/add_fund.html.erb
@@ -51,22 +51,27 @@
         <div class="form-group for-credit">
           <label for="full_name" class="col-sm-4 control-label">* Credit Card Number</label>
           <div class="col-sm-6">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" data-payload="number">
           </div>
         </div>
 
         <div class="form-group for-credit">
-          <label for="exp_date" class="col-sm-4 control-label">* Exp. Date</label>
-          <div class="col-sm-4">
-            <input type="text" class="form-control">
+          <label for="exp_date" class="col-sm-4 control-label">* Exp. Date (mm/yyy)</label>
+          <div class="col-sm-2">
+            <input type="text" class="form-control" data-payload="exp_month">
           </div>
-          <label class="col-sm-2 format">mm/yyyy</label>
+          <div class="col-sm-1">
+            /
+          </div>
+          <div class="col-sm-3">
+            <input type="text" class="form-control" data-payload="exp_year"> 
+          </div>
         </div>
 
         <div class="form-group for-credit">
           <label for="cvv" class="col-sm-4 control-label">* CVV</label>
           <div class="col-sm-4">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" data-payload="cvc">
           </div>
           <label class="col-sm-3 format"><a href="#">What is this?</a></label>
         </div>
@@ -74,35 +79,35 @@
         <div class="form-group for-credit">
           <label for="full_name" class="col-sm-4 control-label">* Full Name</label>
           <div class="col-sm-4">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" data-payload="name">
           </div>
         </div>
 
         <div class="form-group for-credit">
           <label for="street_address" class="col-sm-4 control-label">* Street Address</label>
           <div class="col-sm-6">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" data-payload="address_line1">
           </div>
         </div>
 
         <div class="form-group for-credit">
           <label for="street_address2" class="col-sm-4 control-label">Street Address 2</label>
           <div class="col-sm-6">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" data-payload="address_line2">
           </div>
         </div>
 
         <div class="form-group for-credit">
           <label for="city" class="col-sm-4 control-label">* City</label>
           <div class="col-sm-6">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" data-payload="address_city">
           </div>
         </div>
 
         <div class="form-group for-credit">
           <label for="zip" class="col-sm-4 control-label">* Zip/Postal Code</label>
           <div class="col-sm-3">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" data-payload="address_zip">
           </div>
           <div class="col-sm-4 for-credit">
             <select class="form-control" id="country" name="country">
@@ -115,7 +120,7 @@
         <div class="form-group for-credit">
           <label for="state" class="col-sm-4 control-label">* State</label>
           <div class="col-sm-3">
-            <select class="form-control" id="state" name="state">
+            <select class="form-control" id="state" name="state" data-payload="address_state">
               <option selected="selected">Arizona</option>
             </select>
           </div>
@@ -131,10 +136,17 @@
           </div>
           
         </div>
+
+        <div class="form-group for-credit">
+          <div style="display:none;" class="col-sm-offset-4 col-sm-10 error-container has-error"></div>
+        </div>
         
         <div class="form-group">
-          <div class="col-sm-offset-4 col-sm-10">
+          <div class="col-sm-offset-4 col-sm-2">
             <button type="submit" class="btn btn-default btn-deposit">Deposit</button>
+          </div>
+          <div class="col-sm-4">
+            <button id="stripeSubmit" type="submit" class="btn btn-default btn-deposit">Add CC + Deposit</button>
           </div>
         </div>
       </div>
@@ -144,7 +156,7 @@
 </div>
 
 <script type="text/javascript">
-  $(document).on("ready page:load", function () {
+  //$(document).on("ready page:load", function () {
       window.initializeStripeForm();
 
       $('input[name="payment_type"]').change(function(){
@@ -154,5 +166,5 @@
           $('.for-credit').hide();
         }
       });
-  });
+  //});
 </script>
