Record contest outcomes
When games finish, check entries and record their completion if not completed.
When all entries in a contest are done, assign final positions to them.
This way, entries in a completed contest will have their positions and final-scores
annotated as the canonical 'result' of the contest.

Do this calculation in the realtime worker loop, so we update entries and contests
as they complete.

--- a/app/assets/javascripts/backbone/templates/completed-contests-template.html
+++ b/app/assets/javascripts/backbone/templates/completed-contests-template.html
@@ -22,7 +22,7 @@
           <td><%= moment.utc(contest.complete).local().format("hh:mm a") %></td>
           <td><%= accounting.formatMoney(contest.entry_fee) %></td>
           <td><%= accounting.formatMoney(contest.prize) %></td>
-          <td><%= contest.final_ranking %></td>
+          <td><%= contest.final_pos %></td>
           <td><%= accounting.formatMoney(contest.won) %></td>
           <td><a class="button" href="<%= contest.results_path %>">RESULTS</a></td>
         </tr>
