--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -38,12 +38,16 @@
             <%= link_to 'Home', root_path %>
             <div class="line"></div>
           </li>
-          <li class='<%= menu_classes 'entries' %>'>
+          <li class='<%= menu_classes 'admin' %>'>
             <%= link_to 'Admin', admin_path %>
             <div class="line"></div>
           </li>
           <li class='<%= menu_classes 'games' %>'>
             <%= link_to 'Games', admin_games_path %>
+            <div class="line"></div>
+          </li>
+          <li class='<%= menu_classes 'entries' %>'>
+            <%= link_to 'Entries', admin_entries_path %>
             <div class="line"></div>
           </li>
           <li class='<%= menu_classes 'users' %>'>
