Fix sep.png missing url

--- a/app/assets/stylesheets/gamecenter.css.scss
+++ b/app/assets/stylesheets/gamecenter.css.scss
@@ -244,7 +244,7 @@ p.quarters {
   text-align: center;
   font-size: 12x;
   padding: 5px;
-  background: url(images/sep.png) no-repeat right center;
+  background: image-url('images/sep.png') no-repeat right center;
   h1{
     font-size: 20px;
     &.role{
