Lineups proper detection of invalid lineups at controller level. 'flash' message handling
This is a precursor to properly detecting invalid lineups on the server,
and giving the user appropriate messages when they happen.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,13 @@
   <body class='<%=page_class%>' id='<%= page_id %>'>
     <%= render 'shared/header' %>
     <div class='container capitalcontent'>
+      <% if flash[:notice] %>
+          <div class="alert alert-success"><%= flash[:notice] %></div>
+      <% end %>
+      <% if flash[:alert] %>
+          <div class="alert alert-danger"><%= flash[:alert] %></div>
+      <% end %>
+
       <%= yield %>
     </div>
     <%= render 'shared/footer' %>
