Winnings logic: handle ties, unfinished contests, add admin page
Winnings logic is created from the final_score and final_pos data stored in
each entry of a contest.

--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -50,6 +50,10 @@
             <%= link_to 'Entries', admin_entries_path %>
             <div class="line"></div>
           </li>
+          <li class='<%= menu_classes 'contests' %>'>
+            <%= link_to 'Contests', admin_contests_path %>
+            <div class="line"></div>
+          </li>
           <li class='<%= menu_classes 'users' %>'>
             <%= link_to 'Users', admin_users_path %>
             <div class="line"></div>
