--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,4 +1,5 @@
 <!-- load backbone templates -->
+<%= Rails.application.assets.find_asset('backbone/templates/player-template.html').to_s.html_safe %>
 <%= Rails.application.assets.find_asset('backbone/templates/entry-template.html').to_s.html_safe %>
 <%= Rails.application.assets.find_asset('backbone/templates/games-template.html').to_s.html_safe %>
 <%= Rails.application.assets.find_asset('backbone/templates/entry-summary-template.html').to_s.html_safe %>
