--- a/app/views/entries/_inner_scorecard.html.erb
+++ b/app/views/entries/_inner_scorecard.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-2 panelOne"><strong class="panelStrong">POS</strong>
 
-  <h2 class="panelHeading">1</h2>
+  <h2 class="panelHeading current-position">1</h2>
 </div>
 <div class="col-md-8 panelTwo">
   <p class="user"><%= image_tag "user.png" %> <span class="green username"></span></p>
@@ -19,7 +19,7 @@
 <div class="mylineup-spots">
   <div class="scorecard2">
     <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody> <!-- filled in via ajax -->
+      <tbody class="scorecardBody"> <!-- filled in via ajax -->
       </tbody>
     </table>
   </div>
